# minimax-tic-tac-toe

./: Makefile  README.md  pyproject.toml
src/: ai.py  board.py  constants.py  game.py  main.py  utils.py
tests/: test_ai.py  test_board.py  test_utils.py
